--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.2'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
     implementation group: 'org.reflections', name: 'reflections', version: '0.9.11'
+    implementation "net.lingala.zip4j:zip4j:1.3.3"
 }
 
 jar {
