--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+}
+
 plugins {
     id'com.github.johnrengelman.shadow' version '4.0.4'
     id 'java'
@@ -21,10 +27,12 @@ dependencies {
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.4.1'
     implementation 'com.electronwill.night-config:core:3.6.0'
     implementation 'com.electronwill.night-config:toml:3.6.0'
+    implementation "net.lingala.zip4j:zip4j:1.3.3"
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.2'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
     implementation group: 'org.reflections', name: 'reflections', version: '0.9.11'
-    implementation "net.lingala.zip4j:zip4j:1.3.3"
 }
 
 jar {
