--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,3 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-}
-
 plugins {
     id'com.github.johnrengelman.shadow' version '4.0.4'
     id 'java'
@@ -22,9 +16,10 @@ repositories {
 }
 
 dependencies {
-    compile ('net.dv8tion:JDA:3.8.3_463') {
+    compile ('net.dv8tion:JDA:3.8.3_463')/* {
         exclude module: 'opus-java'
-    }
+    }*/
+    implementation 'com.sedmelluq:lavaplayer:1.3.22'
     implementation 'org.apache.commons:commons-lang3:3.9'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.4.1'
     implementation 'com.electronwill.night-config:core:3.6.0'
@@ -45,6 +40,11 @@ jar {
                 'Main-Class': 'net.dirtcraft.dirtbot.DirtBot'
         )
     }
+}
+
+
+compileJava {
+    options.incremental = false
 }
 
 compileJava.options.encoding = 'UTF-8'
