--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@ plugins {
     id 'java'
 }
 
+configurations {
+    compile.extendsFrom shadow
+}
+
 group 'net.dirtcraft'
 version '3.0'
 
@@ -16,7 +20,7 @@ repositories {
 }
 
 dependencies {
-    compile ('net.dv8tion:JDA:4.0.0_39')/* {
+    compile ('net.dv8tion:JDA:4.2.0_168')/* {
         exclude module: 'opus-java'
     }*/
     implementation 'com.sedmelluq:lavaplayer:1.3.22'
@@ -42,9 +46,17 @@ jar {
     }
 }
 
+jar.enabled = true
+
+build.dependsOn shadowJar
 
 compileJava {
     options.incremental = false
+}
+
+shadowJar {
+    classifier = null
+    configurations = [project.configurations.compile]
 }
 
 compileJava.options.encoding = 'UTF-8'
